# chicken-house-controller

./: .gitignore  README.md
Code/src/: CMakeLists.txt
Code/src/lib/LoRa/: LoRa-RP2040.h
Code/src/lib/display/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
Code/src/lib/display/Fonts/: CMakeLists.txt
Code/src/lib/display/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
Code/src/lib/display/OLED/: CMakeLists.txt  OLED_0in49.c  OLED_0in49.h
Code/src/src/: CMakeLists.txt
Code/src/src/house/: CMakeLists.txt  house.cpp
Code/src/src/remote/: CMakeLists.txt  ImageData.c  ImageData.h  closed_img.c  open_img.c  remote.cpp
